@@ -1,3 +1,8 @@
+PIH Malawi Soundex Module 1.0.3 Release Notes (2011/05/17)
+-----------------------------------------------------------
+In addition to the previous activation codes soundex search can be activated by adding ':s' or ':soundex' at the
+end of the actual search string. This reduces the burden to easily switch between conventional and soundex search.
+
 PIH Malawi Soundex Module 1.0.2 Release Notes (2011/05/17)
 -----------------------------------------------------------
 
